--- a/app/src/main/resources/application.yml
+++ b/app/src/main/resources/application.yml
@@ -14,4 +14,11 @@ management:
   endpoints:
     web:
       exposure:
-        include: prometheus
+        include: health, info, prometheus
+  endpoint:
+    health:
+      show-details: always
+  metrics:
+    export:
+      prometheus:
+        enabled: true
